arkts_static_test/05_Generics/ets_cases/5.1.1_Type_Parameter_Constraint/compile-pass/GEN_05_01_01_009_PASS_CONSTRAINT_TUPLE_TYPE.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id GEN_05_01_01_009_PASS_CONSTRAINT_TUPLE_TYPE
 * @expect compile-pass
 * @section 5.1.1
 * @design tuple类型作为类型参数约束
 * @note spec: constraint can have the form of any type
 */
class G009<T extends [number, string]> {}